Design Patterns: part-02.

--- a/_drafts/2020-01-01-index.md
+++ b/_drafts/2020-01-01-index.md
@@ -234,6 +234,25 @@ date: 2100-01-01 00:02
 [UML系列04之 UML时序图][link_uml04]  
 [UML系列05之 基本流程图][link_uml05]
 
+[设计模式01之 简单工厂模式(创建模式)][link_pattern_01]  
+[设计模式02之 工厂方法模式(创建模式)][link_pattern_02]  
+[设计模式03之 抽象工厂模式(创建模式)][link_pattern_03]  
+[设计模式04之 单例模式(创建模式)][link_pattern_04]  
+[设计模式05之 多例模式(创建模式)][link_pattern_05]  
+[设计模式06之 建造模式(创建模式)][link_pattern_06]  
+[设计模式07之 原型模式(创建模式)][link_pattern_07]  
+[设计模式08之 适配器(Adapter)模式(结构模式)][link_pattern_08]  
+[设计模式09之 合成(Composite)模式(结构模式)][link_pattern_09]  
+[设计模式10之 装饰(Decorator)模式(结构模式)][link_pattern_10]  
+[设计模式11之 代理(Proxy)模式(结构模式)][link_pattern_11]  
+[设计模式12之 享元(Flyweight)模式(结构模式)][link_pattern_12]  
+[设计模式13之 门面(Facade)模式(结构模式)][link_pattern_13]  
+[设计模式14之 桥梁(Bridge)模式(结构模式)][link_pattern_14]  
+[设计模式15之 不变(Immutable)模式(行为模式)][link_pattern_15]  
+[设计模式16之 策略(Strategy)模式(行为模式)][link_pattern_16]  
+[设计模式17之 模板方法(Template Method)模式(行为模式)][link_pattern_17]  
+[设计模式18之 观察者(Observer)模式(行为模式)][link_pattern_18]  
+[设计模式19之 迭代器(Iterator)模式(行为模式)][link_pattern_19]  
 
 
 
@@ -486,6 +505,26 @@ date: 2100-01-01 00:02
 [link_uml03]:   /2012/10/03/uml
 [link_uml04]:   /2012/10/04/uml
 [link_uml05]:   /2012/10/05/uml
+
+[link_pattern_01]:   /2012/10/11/design_pattern
+[link_pattern_02]:   /2012/10/12/design_pattern
+[link_pattern_03]:   /2012/10/13/design_pattern
+[link_pattern_04]:   /2012/10/14/design_pattern
+[link_pattern_05]:   /2012/10/15/design_pattern
+[link_pattern_06]:   /2012/10/16/design_pattern
+[link_pattern_07]:   /2012/10/17/design_pattern
+[link_pattern_08]:   /2012/10/18/design_pattern
+[link_pattern_09]:   /2012/10/19/design_pattern
+[link_pattern_10]:   /2012/10/20/design_pattern
+[link_pattern_11]:   /2012/10/21/design_pattern
+[link_pattern_12]:   /2012/10/22/design_pattern
+[link_pattern_13]:   /2012/10/23/design_pattern
+[link_pattern_14]:   /2012/10/24/design_pattern
+[link_pattern_15]:   /2012/10/25/design_pattern
+[link_pattern_16]:   /2012/10/26/design_pattern
+[link_pattern_17]:   /2012/10/27/design_pattern
+[link_pattern_18]:   /2012/10/28/design_pattern
+[link_pattern_19]:   /2012/10/29/design_pattern
 
 
 [drafts_link_java_project_calculator01]: /2012/12/01/java/projects/calculator/2012-12-01-calculator01
