--- a/_posts/2000-01-01-index.md
+++ b/_posts/2000-01-01-index.md
@@ -7,94 +7,174 @@ tags: [android]
 date: 2100-01-01 00:01
 ---
 
+<!-- 删除"草稿" 和 drafts -->
 
 > 本文是目录索引
 
 > **目录**  
-> **1**. [Java](#anchor1)  
-> **2**. [数据结构和算法](#anchor2)  
-> **3**. [Android](#anchor3)  
-
-
+[第1部分 Linux](#anchor1)  
+[第2部分 Java](#anchor2)  
+[第3部分 数据结构和算法](#anchor3)  
+[第4部分 设计模式](#anchor4)  
 
 <a name="anchor1"></a>
-# 1. Java
+# 第1部分 Linux
 
-1.1 Java基础文章  
-&nbsp;&nbsp;&nbsp;&nbsp; [Java 随机数][link_java_random]  
-
-
-1.2 Java集合系列文章  
-&nbsp;&nbsp;&nbsp;&nbsp; [Java 集合系列目录(Category)][link_java_collection_00]  
-&nbsp;&nbsp;&nbsp;&nbsp; [Java 集合系列01之 总体框架][link_java_collection_01]  
-&nbsp;&nbsp;&nbsp;&nbsp; [Java 集合系列02之 Collection架构][link_java_collection_02]  
-&nbsp;&nbsp;&nbsp;&nbsp; [Java 集合系列03之 ArrayList详细介绍(源码解析)和使用示例][link_java_collection_03]  
-&nbsp;&nbsp;&nbsp;&nbsp; [Java 集合系列04之 fail-fast总结(通过ArrayList来说明fail-fast的原理、解决办法)][link_java_collection_04]  
-&nbsp;&nbsp;&nbsp;&nbsp; [Java 集合系列05之 LinkedList详细介绍(源码解析)和使用示例][link_java_collection_05]  
-&nbsp;&nbsp;&nbsp;&nbsp; [Java 集合系列06之 Vector详细介绍(源码解析)和使用示例][link_java_collection_06]  
-&nbsp;&nbsp;&nbsp;&nbsp; [Java 集合系列07之 Stack详细介绍(源码解析)和使用示例][link_java_collection_07]  
-&nbsp;&nbsp;&nbsp;&nbsp; [Java 集合系列08之 List总结(LinkedList, ArrayList等使用场景和性能分析)][link_java_collection_08]  
-&nbsp;&nbsp;&nbsp;&nbsp; [Java 集合系列09之 Map架构][link_java_collection_09]  
-&nbsp;&nbsp;&nbsp;&nbsp; [Java 集合系列10之 HashMap详细介绍(源码解析)和使用示例][link_java_collection_10]  
-&nbsp;&nbsp;&nbsp;&nbsp; [Java 集合系列11之 Hashtable详细介绍(源码解析)和使用示例][link_java_collection_11]  
-&nbsp;&nbsp;&nbsp;&nbsp; [Java 集合系列12之 TreeMap详细介绍(源码解析)和使用示例][link_java_collection_12]  
-&nbsp;&nbsp;&nbsp;&nbsp; [Java 集合系列13之 WeakHashMap详细介绍(源码解析)和使用示例][link_java_collection_13]  
-&nbsp;&nbsp;&nbsp;&nbsp; [Java 集合系列14之 Map总结(HashMap, Hashtable, TreeMap, WeakHashMap等使用场景)][link_java_collection_14]  
-&nbsp;&nbsp;&nbsp;&nbsp; [Java 集合系列15之 Set架构][link_java_collection_15]  
-&nbsp;&nbsp;&nbsp;&nbsp; [Java 集合系列16之 HashSet详细介绍(源码解析)和使用示例][link_java_collection_16]  
-&nbsp;&nbsp;&nbsp;&nbsp; [Java 集合系列17之 TreeSet详细介绍(源码解析)和使用示例][link_java_collection_17]  
-&nbsp;&nbsp;&nbsp;&nbsp; [Java 集合系列18之 Iterator和Enumeration比较][link_java_collection_18]    
-&nbsp;&nbsp;&nbsp;&nbsp; [Java 集合系列扩展(一) Comparable和Comparator比较][link_java_collection_19]  
-&nbsp;&nbsp;&nbsp;&nbsp; [Java 集合系列扩展(二) hashCode()和equals()的若干问题解答][link_java_collection_20]
-
-1.3 Java 时间相关内容  
-&nbsp;&nbsp;&nbsp;&nbsp; [Java 时间相关内容的目录(Category)][link_java_time_00]  
-&nbsp;&nbsp;&nbsp;&nbsp; [Java 时间相关内容01 Calendar][link_java_time_01]  
-&nbsp;&nbsp;&nbsp;&nbsp; [Java 时间相关内容02 万年历和自定义Calendar接口][link_java_time_02]  
-&nbsp;&nbsp;&nbsp;&nbsp; [Java 时间相关内容03 Date][link_java_time_03]  
-&nbsp;&nbsp;&nbsp;&nbsp; [Java 时间相关内容04 DateFormat][link_java_time_04]  
-&nbsp;&nbsp;&nbsp;&nbsp; [Java 时间相关内容05 SimpleDateFormat][link_java_time_05]  
-&nbsp;&nbsp;&nbsp;&nbsp; [Java 时间相关内容06 Locale][link_java_time_06]  
-&nbsp;&nbsp;&nbsp;&nbsp; [Java 时间相关内容07 Time][link_java_time_07]
-
-1.4 Java 字符串系列  
-&nbsp;&nbsp;&nbsp;&nbsp; [Java 字符串系列01 String详解, String和CharSequence区别, StringBuilder和StringBuffer的区别][link_java_charsequence_01]  
-&nbsp;&nbsp;&nbsp;&nbsp; [Java 字符串系列02 StringBuilder详解][link_java_charsequence_02]  
-&nbsp;&nbsp;&nbsp;&nbsp; [Java 字符串系列03 StringBuffer详解][link_java_charsequence_03]  
-
-1.5 Java io系列  
-
-&nbsp;&nbsp;&nbsp;&nbsp; [java io系列01之 IO框架][link_java_io_01]  
-&nbsp;&nbsp;&nbsp;&nbsp; [java io系列02之 ByteArrayInputStream详解][link_java_io_02]  
-&nbsp;&nbsp;&nbsp;&nbsp; [java io系列03之 ByteArrayOutputStream详解][link_java_io_03]  
-&nbsp;&nbsp;&nbsp;&nbsp; [java io系列04之 管道(PipedOutputStream和PipedInputStream)详解][link_java_io_04]  
-&nbsp;&nbsp;&nbsp;&nbsp; [java io系列05之 ObjectInputStream和ObjectOutputStream详解][link_java_io_05]  
-&nbsp;&nbsp;&nbsp;&nbsp; [java io系列06之 序列化(Serializable和Externalizable)详解][link_java_io_06]  
-&nbsp;&nbsp;&nbsp;&nbsp; [java io系列07之 FileInputStream和FileOutputStream详解][link_java_io_07]  
-&nbsp;&nbsp;&nbsp;&nbsp; [java io系列08之 File详解][link_java_io_08]  
-&nbsp;&nbsp;&nbsp;&nbsp; [java io系列09之 FileDescriptor详解][link_java_io_09]  
-&nbsp;&nbsp;&nbsp;&nbsp; [java io系列10之 FilterInputStream详解][link_java_io_10]  
-&nbsp;&nbsp;&nbsp;&nbsp; [java io系列11之 FilterOutputStream详解][link_java_io_11]  
-&nbsp;&nbsp;&nbsp;&nbsp; [java io系列12之 BufferedInputStream详解][link_java_io_12]  
-&nbsp;&nbsp;&nbsp;&nbsp; [java io系列13之 BufferedOutputStream详解][link_java_io_13]  
-&nbsp;&nbsp;&nbsp;&nbsp; [java io系列14之 DataInputStream详解][link_java_io_14]  
-&nbsp;&nbsp;&nbsp;&nbsp; [java io系列15之 DataOutputStream详解][link_java_io_15]  
-&nbsp;&nbsp;&nbsp;&nbsp; [java io系列16之 PrintStream详解][link_java_io_16]  
-&nbsp;&nbsp;&nbsp;&nbsp; [java io系列17之 System.out.println详解][link_java_io_17]  
-&nbsp;&nbsp;&nbsp;&nbsp; [java io系列18之 CharArrayReader详解][link_java_io_18]  
-&nbsp;&nbsp;&nbsp;&nbsp; [java io系列19之 CharArrayWriter详解][link_java_io_19]  
-&nbsp;&nbsp;&nbsp;&nbsp; [java io系列20之 PipedReader和PipedWriter详解][link_java_io_20]  
-&nbsp;&nbsp;&nbsp;&nbsp; [java io系列21之 InputStreamReader和OutputStreamWriter详解][link_java_io_21]  
-&nbsp;&nbsp;&nbsp;&nbsp; [java io系列22之 FileReader和FileWriter详解][link_java_io_22]  
-&nbsp;&nbsp;&nbsp;&nbsp; [java io系列23之 BufferedReader详解][link_java_io_23]  
-&nbsp;&nbsp;&nbsp;&nbsp; [java io系列24之 BufferedWriter详解][link_java_io_24]  
-&nbsp;&nbsp;&nbsp;&nbsp; [java io系列25之 PrintWriter详解][link_java_io_25]  
-&nbsp;&nbsp;&nbsp;&nbsp; [java io系列26之 RandomAccessFile详解][link_java_io_26]
+[Linux学习基础篇01 双系统中ubuntu的安装方法][link_linux_ubuntu01]  
+[Linux学习基础篇02 ubuntu的配置(一) 启用root登录界面][link_linux_ubuntu_cfg01]  
+[Linux学习基础篇02 ubuntu的配置(二) 设置默认开机选项][link_linux_ubuntu_cfg02]  
+[Linux学习基础篇02 ubuntu的配置(三) 开机自动挂载磁盘分区][link_linux_ubuntu_cfg03]  
+[Linux学习基础篇02 ubuntu的配置(四) 终端快捷键和常用配置][link_linux_ubuntu_cfg04]  
+[Linux学习基础篇02 ubuntu的配置(五) 工作区和自定义快捷键][link_linux_ubuntu_cfg05]  
+[Linux学习基础篇03 ubuntu软件(一) 必备软件][link_linux_ubuntu_sw01]  
+[Linux学习基础篇03 ubuntu软件(二) JDK][link_linux_ubuntu_sw02]  
+[Linux学习基础篇03 ubuntu软件(三) 串口工具minicom][link_linux_ubuntu_sw03]  
+[Linux学习基础篇03 ubuntu指令和技巧(一) 常用指令汇总][link_linux_ubuntu_cmd01]  
+[Linux学习基础篇03 ubuntu指令和技巧(二) 网络相关的指令][link_linux_ubuntu_cmd02]  
+[Linux学习基础篇03 ubuntu指令和技巧(三) 内容查看和文件查找][link_linux_ubuntu_cmd03]  
+[Linux学习基础篇03 ubuntu指令和技巧(四) 文件的权限][link_linux_ubuntu_cmd04]  
+[Linux学习基础篇03 ubuntu指令和技巧(五) 用户和用户组的相关操作][link_linux_ubuntu_cmd05]  
+[Linux学习基础篇03 ubuntu指令和技巧(六) 压缩和解压][link_linux_ubuntu_cmd06]  
+[Linux学习基础篇03 ubuntu指令和技巧(七) 挂载,卸载,重新分区和格式化][link_linux_ubuntu_cmd07]  
+[Linux学习基础篇03 ubuntu指令和技巧(八) Jar包][link_linux_ubuntu_cmd08]  
 
 
+[Linux bash总结(一) 基础部分][link_linux_bash01]  
+[Linux bash总结(二) 高级部分][link_linux_bash02]  
+[Linux bash总结(三) 实战][link_linux_bash03]
+
+[vim(编辑器之神)01基础篇(一) vim入门][link_vim_basic01]  
+[vim(编辑器之神)01基础篇(二) vim模式解析][link_vim_basic02]  
+[vim(编辑器之神)01基础篇(三) vim指令补充说明][link_vim_basic03]  
+[vim(编辑器之神)02配置篇(一) 基本配置][link_vim_setup01]  
+[vim(编辑器之神)02配置篇(二) 插件][link_vim_setup02]
 
 <a name="anchor2"></a>
-# 2. 数据结构和算法(64篇)
+# 第2部分 Java
+
+[Java 随机数][link_java_random]  
+[Java引用总结--StrongReference、SoftReference、WeakReference、PhantomReference][link_java_reference]  
+[Java Annotation认知(包括框架图、详细介绍、示例说明)][link_java_annotation]  
+[Java 反射机制(包括组成、结构、示例说明等内容)][link_java_reflection]  
+
+[Java 字符串系列01 String详解, String和CharSequence区别, StringBuilder和StringBuffer的区别][link_java_charsequence_01]  
+[Java 字符串系列02 StringBuilder详解][link_java_charsequence_02]  
+[Java 字符串系列03 StringBuffer详解][link_java_charsequence_03]  
+
+[Java异常(一) Java异常简介及其架构][link_java_exception01]  
+[Java异常(二) 《Effective Java》中关于异常处理的几条建议][link_java_exception02]  
+[Java异常(三) 《Java Puzzles》中关于异常的几个谜题][link_java_exception03]  
+
+[Java 时间相关内容的目录(Category)][link_java_time_00]  
+[Java 时间相关内容01 Calendar][link_java_time_01]  
+[Java 时间相关内容02 万年历和自定义Calendar接口][link_java_time_02]  
+[Java 时间相关内容03 Date][link_java_time_03]  
+[Java 时间相关内容04 DateFormat][link_java_time_04]  
+[Java 时间相关内容05 SimpleDateFormat][link_java_time_05]  
+[Java 时间相关内容06 Locale][link_java_time_06]  
+[Java 时间相关内容07 Time][link_java_time_07]
+
+
+[Java 集合系列目录(Category)][link_java_collection_00]  
+[Java 集合系列01之 总体框架][link_java_collection_01]  
+[Java 集合系列02之 Collection架构][link_java_collection_02]  
+[Java 集合系列03之 ArrayList详细介绍(源码解析)和使用示例][link_java_collection_03]  
+[Java 集合系列04之 fail-fast总结(通过ArrayList来说明fail-fast的原理、解决办法)][link_java_collection_04]  
+[Java 集合系列05之 LinkedList详细介绍(源码解析)和使用示例][link_java_collection_05]  
+[Java 集合系列06之 Vector详细介绍(源码解析)和使用示例][link_java_collection_06]  
+[Java 集合系列07之 Stack详细介绍(源码解析)和使用示例][link_java_collection_07]  
+[Java 集合系列08之 List总结(LinkedList, ArrayList等使用场景和性能分析)][link_java_collection_08]  
+[Java 集合系列09之 Map架构][link_java_collection_09]  
+[Java 集合系列10之 HashMap详细介绍(源码解析)和使用示例][link_java_collection_10]  
+[Java 集合系列11之 Hashtable详细介绍(源码解析)和使用示例][link_java_collection_11]  
+[Java 集合系列12之 TreeMap详细介绍(源码解析)和使用示例][link_java_collection_12]  
+[Java 集合系列13之 WeakHashMap详细介绍(源码解析)和使用示例][link_java_collection_13]  
+[Java 集合系列14之 Map总结(HashMap, Hashtable, TreeMap, WeakHashMap等使用场景)][link_java_collection_14]  
+[Java 集合系列15之 Set架构][link_java_collection_15]  
+[Java 集合系列16之 HashSet详细介绍(源码解析)和使用示例][link_java_collection_16]  
+[Java 集合系列17之 TreeSet详细介绍(源码解析)和使用示例][link_java_collection_17]  
+[Java 集合系列18之 Iterator和Enumeration比较][link_java_collection_18]    
+[Java 集合系列扩展(一) Comparable和Comparator比较][link_java_collection_19]  
+[Java 集合系列扩展(二) hashCode()和equals()的若干问题解答][link_java_collection_20]
+
+
+[java io系列01之 IO框架][link_java_io_01]  
+[java io系列02之 ByteArrayInputStream详解][link_java_io_02]  
+[java io系列03之 ByteArrayOutputStream详解][link_java_io_03]  
+[java io系列04之 管道(PipedOutputStream和PipedInputStream)详解][link_java_io_04]  
+[java io系列05之 ObjectInputStream和ObjectOutputStream详解][link_java_io_05]  
+[java io系列06之 序列化(Serializable和Externalizable)详解][link_java_io_06]  
+[java io系列07之 FileInputStream和FileOutputStream详解][link_java_io_07]  
+[java io系列08之 File详解][link_java_io_08]  
+[java io系列09之 FileDescriptor详解][link_java_io_09]  
+[java io系列10之 FilterInputStream详解][link_java_io_10]  
+[java io系列11之 FilterOutputStream详解][link_java_io_11]  
+[java io系列12之 BufferedInputStream详解][link_java_io_12]  
+[java io系列13之 BufferedOutputStream详解][link_java_io_13]  
+[java io系列14之 DataInputStream详解][link_java_io_14]  
+[java io系列15之 DataOutputStream详解][link_java_io_15]  
+[java io系列16之 PrintStream详解][link_java_io_16]  
+[java io系列17之 System.out.println详解][link_java_io_17]  
+[java io系列18之 CharArrayReader详解][link_java_io_18]  
+[java io系列19之 CharArrayWriter详解][link_java_io_19]  
+[java io系列20之 PipedReader和PipedWriter详解][link_java_io_20]  
+[java io系列21之 InputStreamReader和OutputStreamWriter详解][link_java_io_21]  
+[java io系列22之 FileReader和FileWriter详解][link_java_io_22]  
+[java io系列23之 BufferedReader详解][link_java_io_23]  
+[java io系列24之 BufferedWriter详解][link_java_io_24]  
+[java io系列25之 PrintWriter详解][link_java_io_25]  
+[java io系列26之 RandomAccessFile详解][link_java_io_26]
+
+
+
+[Java多线程系列01--“基础篇”01之 基本概念][link_java_threads_basic01]  
+[Java多线程系列02--“基础篇”02之 常用的实现多线程的两种方式][link_java_threads_basic02]  
+[Java多线程系列03--“基础篇”03之 Thread中start()和run()的区别][link_java_threads_basic03]  
+[Java多线程系列04--“基础篇”04之 synchronized关键字][link_java_threads_basic04]  
+[Java多线程系列05--“基础篇”05之 线程等待与唤醒][link_java_threads_basic05]  
+[Java多线程系列06--“基础篇”06之 线程让步][link_java_threads_basic06]  
+[Java多线程系列07--“基础篇”07之 线程休眠][link_java_threads_basic07]  
+[Java多线程系列08--“基础篇”08之 join()][link_java_threads_basic08]  
+[Java多线程系列09--“基础篇”09之 interrupt()和线程终止方式][link_java_threads_basic09]  
+[Java多线程系列10--“基础篇”10之 线程优先级和守护线程][link_java_threads_basic10]  
+[Java多线程系列11--“基础篇”11之 生产消费者问题][link_java_threads_basic11]
+[Java多线程系列12--“JUC原子类”01之 框架][link_java_juc_atomic01]  
+[Java多线程系列13--“JUC原子类”02之 AtomicLong原子类][link_java_juc_atomic02]  
+[Java多线程系列14--“JUC原子类”03之 AtomicLongArray原子类][link_java_juc_atomic03]  
+[Java多线程系列15--“JUC原子类”04之 AtomicReference原子类][link_java_juc_atomic04]  
+[Java多线程系列16--“JUC原子类”05之 AtomicLongFieldUpdater原子类][link_java_juc_atomic05]
+[Java多线程系列17--“JUC锁”01之 框架][link_java_juc_lock01]  
+[Java多线程系列18--“JUC锁”02之 互斥锁ReentrantLock][link_java_juc_lock02]  
+[Java多线程系列19--“JUC锁”03之 公平锁(一)][link_java_juc_lock03]  
+[Java多线程系列20--“JUC锁”04之 公平锁(二)][link_java_juc_lock04]  
+[Java多线程系列21--“JUC锁”05之 非公平锁][link_java_juc_lock05]  
+[Java多线程系列22--“JUC锁”06之 Condition条件][link_java_juc_lock06]  
+[Java多线程系列23--“JUC锁”07之 LockSupport][link_java_juc_lock07]  
+[Java多线程系列24--“JUC锁”08之 共享锁和ReentrantReadWriteLock][link_java_juc_lock08]  
+[Java多线程系列25--“JUC锁”09之 CountDownLatch原理和示例][link_java_juc_lock09]  
+[Java多线程系列26--“JUC锁”10之 CyclicBarrier原理和示例][link_java_juc_lock10]  
+[Java多线程系列27--“JUC锁”11之 Semaphore信号量的原理和示例][link_java_juc_lock11]
+[Java多线程系列28--“JUC集合”01之 框架][link_java_juc_col01]  
+[Java多线程系列29--“JUC集合”02之 CopyOnWriteArrayList][link_java_juc_col02]  
+[Java多线程系列30--“JUC集合”03之 CopyOnWriteArraySet][link_java_juc_col03]  
+[Java多线程系列31--“JUC集合”04之 ConcurrentHashMap][link_java_juc_col04]  
+[Java多线程系列32--“JUC集合”05之 ConcurrentSkipListMap][link_java_juc_col05]  
+[Java多线程系列33--“JUC集合”06之 ConcurrentSkipListSet][link_java_juc_col06]  
+[Java多线程系列34--“JUC集合”07之 ArrayBlockingQueue][link_java_juc_col07]  
+[Java多线程系列35--“JUC集合”08之 LinkedBlockingQueue][link_java_juc_col08]  
+[Java多线程系列36--“JUC集合”09之 LinkedBlockingDeque][link_java_juc_col09]  
+[Java多线程系列37--“JUC集合”10之 ConcurrentHashMap][link_java_juc_col10]
+[Java多线程系列38--“JUC线程池”01之 线程池架构][link_java_juc_executor01]  
+[Java多线程系列39--“JUC线程池”02之 线程池原理(一)][link_java_juc_executor02]  
+[Java多线程系列40--“JUC线程池”03之 线程池原理(二)][link_java_juc_executor03]  
+[Java多线程系列41--“JUC线程池”04之 线程池原理(三)][link_java_juc_executor04]  
+[Java多线程系列42--“JUC线程池”05之 线程池原理(四)][link_java_juc_executor05]
+[Java多线程系列--“JUC线程池”06之 Callable和Future][link_java_juc_executor06]
+
+
+
+<a name="anchor3"></a>
+# 第3部分 数据结构和算法
 
 [数据结构和算法 目录][link_ds_index] 
 
@@ -106,19 +186,20 @@ date: 2100-01-01 00:01
 |              | [队列][link_ds_linear_list] | [队列][link_ds_linear_list] | [队列][link_ds_linear_list] |
 |              |  |  |  |
 | **树性结构** | [二叉查找树][link_ds_tree_bstree_c] | [二叉查找树][link_ds_tree_bstree_cpp] | [二叉查找树][link_ds_tree_bstree_java] |
-|              | AVL树 | AVL树 | AVL树 |
-|              | 伸展树 | 伸展树 | 伸展树 |
-|              | 1. 红黑树(一)之 原理和算法详细介绍 | 1. 红黑树(一)之 原理和算法详细介绍 | 1. 红黑树(一)之 原理和算法详细介绍 |
-|              | 2. 红黑树(二)之 C语言的实现 | 2. 红黑树(二)之 C语言的实现 | 2. 红黑树(二)之 C语言的实现 |
-|              | 3. 红黑树(三)之 Linux内核中红黑树的经典实现 | 3. 红黑树(三)之 Linux内核中红黑树的经典实现 | 3. 红黑树(三)之 Linux内核中红黑树的经典实现 |
-|              | 4. 红黑树(六)之 参考资料 |  |  |
+|              | [AVL树][link_ds_tree_avltree_c] | [AVL树][link_ds_tree_avltree_cpp] | [AVL树][link_ds_tree_avltree_java] |
+|              | [伸展树][link_ds_tree_splaytree_c] | [伸展树][link_ds_tree_splaytree_cpp] | [伸展树][link_ds_tree_splaytree_java] |
+|              | [哈夫曼树][link_ds_tree_huffman_c] | [哈夫曼树][link_ds_tree_huffman_cpp] | [哈夫曼树][link_ds_tree_huffman_java] |
+|              | [1. 红黑树(一)之 原理和算法详细介绍][link_ds_tree_rbtree01] | [1. 红黑树(一)之 原理和算法详细介绍][link_ds_tree_rbtree01] | [1. 红黑树(一)之 原理和算法详细介绍][link_ds_tree_rbtree01] |
+|              | [2. 红黑树(二)之 C语言的实现][link_ds_tree_rbtree02] | [2. 红黑树(四)之 C++的实现][link_ds_tree_rbtree04] | [2. 红黑树(五)之 Java的实现][link_ds_tree_rbtree05] |
+|              | [3. 红黑树(三)之 Linux内核中红黑树的经典实现][link_ds_tree_rbtree03] | [3. 红黑树(六)之 参考资料][link_ds_tree_rbtree06] | [3. 红黑树(六)之 参考资料][link_ds_tree_rbtree06] |
+|              | [4. 红黑树(六)之 参考资料][link_ds_tree_rbtree06] |  |  |
 |              | [哈夫曼树][link_ds_tree_huffman_c] | [哈夫曼树][link_ds_tree_huffman_cpp] | [哈夫曼树][link_ds_tree_huffman_java] |
 |              |  |  |  |
 | **堆**       | [二叉堆][link_ds_heap_binary_c] | [二叉堆][link_ds_heap_binary_cpp] | [二叉堆][link_ds_heap_binary_java] |
 |              | [左倾堆][link_ds_heap_leftist_c] | [左倾堆][link_ds_heap_leftist_cpp] | [左倾堆][link_ds_heap_leftist_java] |
 |              | [斜堆][link_ds_heap_skewheap_c] | [斜堆][link_ds_heap_skewheap_cpp] | [斜堆][link_ds_heap_skewheap_java] |
-|              | 二项堆 | 二项堆 | 二项堆 |
-|              | 斐波那契堆 | 斐波那契堆 | 斐波那契堆 |
+|              | [二项堆][link_ds_heap_binomial_c] | [二项堆][link_ds_heap_binomial_cpp] | [二项堆][link_ds_heap_binomial_java] |
+|              | [斐波那契堆][link_ds_heap_fabonacci_c] | [斐波那契堆][link_ds_heap_fabonacci_cpp] | [斐波那契堆][link_ds_heap_fabonacci_java] |
 |              |  |  |  |
 | **图**       | [图的理论基础][link_ds_graph_thesis] | [图的理论基础][link_ds_graph_thesis] | [图的理论基础][link_ds_graph_thesis] |
 |              | [1. 邻接矩阵无向图][link_ds_graph_matrix_udg_c] | [1. 邻接矩阵无向图][link_ds_graph_matrix_udg_cpp] | [1. 邻接矩阵无向图][link_ds_graph_matrix_udg_java] |
@@ -143,12 +224,77 @@ date: 2100-01-01 00:01
 
 
 
+<a name="anchor4"></a>
+# 第4部分 设计模式
 
+[UML系列01之 UML和绘图工具Visio介绍][link_uml01]  
+[UML系列02之 UML类图(一)][link_uml02]  
+[UML系列03之 UML类图(二)][link_uml03]  
+[UML系列04之 UML时序图][link_uml04]  
+[UML系列05之 基本流程图][link_uml05]
+
+[设计模式01之 简单工厂模式(创建模式)][link_pattern_01]  
+[设计模式02之 工厂方法模式(创建模式)][link_pattern_02]  
+[设计模式03之 抽象工厂模式(创建模式)][link_pattern_03]  
+[设计模式04之 单例模式(创建模式)][link_pattern_04]  
+[设计模式05之 多例模式(创建模式)][link_pattern_05]  
+[设计模式06之 建造模式(创建模式)][link_pattern_06]  
+[设计模式07之 原型模式(创建模式)][link_pattern_07]  
+[设计模式08之 适配器(Adapter)模式(结构模式)][link_pattern_08]  
+[设计模式09之 合成(Composite)模式(结构模式)][link_pattern_09]  
+[设计模式10之 装饰(Decorator)模式(结构模式)][link_pattern_10]  
+[设计模式11之 代理(Proxy)模式(结构模式)][link_pattern_11]  
+[设计模式12之 享元(Flyweight)模式(结构模式)][link_pattern_12]  
+[设计模式13之 门面(Facade)模式(结构模式)][link_pattern_13]  
+[设计模式14之 桥梁(Bridge)模式(结构模式)][link_pattern_14]  
+[设计模式15之 不变(Immutable)模式(行为模式)][link_pattern_15]  
+[设计模式16之 策略(Strategy)模式(行为模式)][link_pattern_16]  
+[设计模式17之 模板方法(Template Method)模式(行为模式)][link_pattern_17]  
+[设计模式18之 观察者(Observer)模式(行为模式)][link_pattern_18]  
+[设计模式19之 迭代器(Iterator)模式(行为模式)][link_pattern_19]  
+
+
+
+
+
+
+
+<!-- Linux 链接 -->
+[link_linux_ubuntu01]: /2011/07/01/ubuntu-01-install
+[link_linux_ubuntu_cfg01]: /2011/07/02/ubuntu-01-setup
+[link_linux_ubuntu_cfg02]: /2011/07/02/ubuntu-02-setup
+[link_linux_ubuntu_cfg03]: /2011/07/02/ubuntu-03-setup
+[link_linux_ubuntu_cfg04]: /2011/07/02/ubuntu-04-setup
+[link_linux_ubuntu_cfg05]: /2011/07/02/ubuntu-05-setup
+[link_linux_ubuntu_sw01]:  /2011/07/03/ubuntu-01-software
+[link_linux_ubuntu_sw02]:  /2011/07/03/ubuntu-02-software
+[link_linux_ubuntu_sw03]:  /2011/07/03/ubuntu-03-software
+[link_linux_ubuntu_cmd01]: /2011/07/04/ubuntu-01-cmd
+[link_linux_ubuntu_cmd02]: /2011/07/04/ubuntu-02-cmd
+[link_linux_ubuntu_cmd03]: /2011/07/04/ubuntu-03-cmd
+[link_linux_ubuntu_cmd04]: /2011/07/04/ubuntu-04-cmd
+[link_linux_ubuntu_cmd05]: /2011/07/04/ubuntu-05-cmd
+[link_linux_ubuntu_cmd06]: /2011/07/04/ubuntu-06-cmd
+[link_linux_ubuntu_cmd07]: /2011/07/04/ubuntu-07-cmd
+[link_linux_ubuntu_cmd08]: /2011/07/04/ubuntu-08-cmd
+
+[link_linux_bash01]:       /2011/09/01/shell
+[link_linux_bash02]:       /2011/09/02/shell
+[link_linux_bash03]:       /2011/09/03/shell
+
+[link_vim_basic01]:        /2011/08/01/vim-01-basic
+[link_vim_basic02]:        /2011/08/01/vim-02-basic
+[link_vim_basic03]:        /2011/08/01/vim-03-basic
+[link_vim_setup01]:        /2011/08/01/vim-01-setup
+[link_vim_setup02]:        /2011/08/01/vim-02-setup
 
 
 
 <!-- Java 链接 -->
-[link_java_random]: /2012/03/01/random
+[link_java_random]:     /2012/03/01/random
+[link_java_reference]:  /2012/03/02/reference 
+[link_java_annotation]: /2012/03/03/annotation
+[link_java_reflection]: /2012/03/04/reflection
 
 [link_java_collection_00]: /2012/02/01/collection-00-index
 [link_java_collection_01]: /2012/02/01/collection-01-summary
@@ -187,6 +333,10 @@ date: 2100-01-01 00:01
 [link_java_charsequence_02]: /2012/04/12/charsequence
 [link_java_charsequence_03]: /2012/04/13/charsequence
 
+[link_java_exception01]: /2012/04/14/exception
+[link_java_exception02]: /2012/04/15/exception
+[link_java_exception03]: /2012/04/16/exception
+
 [link_java_io_01]: /2012/05/01/io
 [link_java_io_02]: /2012/05/02/ByteArrayInputStream
 [link_java_io_03]: /2012/05/03/ByteArrayOutputStream
@@ -215,6 +365,50 @@ date: 2100-01-01 00:01
 [link_java_io_26]: /2012/05/26/RandomAccessFile
 
 
+[link_java_threads_basic01]: /2012/08/01/threads-basic
+[link_java_threads_basic02]: /2012/08/02/threads-basic
+[link_java_threads_basic03]: /2012/08/03/threads-basic
+[link_java_threads_basic04]: /2012/08/04/threads-basic
+[link_java_threads_basic05]: /2012/08/05/threads-basic
+[link_java_threads_basic06]: /2012/08/06/threads-basic
+[link_java_threads_basic07]: /2012/08/07/threads-basic
+[link_java_threads_basic08]: /2012/08/08/threads-basic
+[link_java_threads_basic09]: /2012/08/09/threads-basic
+[link_java_threads_basic10]: /2012/08/10/threads-basic
+[link_java_threads_basic11]: /2012/08/11/threads-basic
+[link_java_juc_atomic01]: /2012/08/12/juc-atomic01
+[link_java_juc_atomic02]: /2012/08/12/juc-atomic02
+[link_java_juc_atomic03]: /2012/08/12/juc-atomic03
+[link_java_juc_atomic04]: /2012/08/12/juc-atomic04
+[link_java_juc_atomic05]: /2012/08/12/juc-atomic05
+[link_java_juc_lock01]: /2012/08/13/juc-lock01
+[link_java_juc_lock02]: /2012/08/13/juc-lock02
+[link_java_juc_lock03]: /2012/08/13/juc-lock03
+[link_java_juc_lock04]: /2012/08/13/juc-lock04
+[link_java_juc_lock05]: /2012/08/13/juc-lock05
+[link_java_juc_lock06]: /2012/08/13/juc-lock06
+[link_java_juc_lock07]: /2012/08/13/juc-lock07
+[link_java_juc_lock08]: /2012/08/13/juc-lock08
+[link_java_juc_lock09]: /2012/08/13/juc-lock09
+[link_java_juc_lock10]: /2012/08/13/juc-lock10
+[link_java_juc_lock11]: /2012/08/13/juc-lock11
+[link_java_juc_col01]: /2012/08/14/juc-col01
+[link_java_juc_col02]: /2012/08/14/juc-col02
+[link_java_juc_col03]: /2012/08/14/juc-col03
+[link_java_juc_col04]: /2012/08/14/juc-col04
+[link_java_juc_col05]: /2012/08/14/juc-col05
+[link_java_juc_col06]: /2012/08/14/juc-col06
+[link_java_juc_col07]: /2012/08/14/juc-col07
+[link_java_juc_col08]: /2012/08/14/juc-col08
+[link_java_juc_col09]: /2012/08/14/juc-col09
+[link_java_juc_col10]: /2012/08/14/juc-col10
+[link_java_juc_executor01]: /2012/08/15/juc-executor01
+[link_java_juc_executor02]: /2012/08/15/juc-executor02
+[link_java_juc_executor03]: /2012/08/15/juc-executor03
+[link_java_juc_executor04]: /2012/08/15/juc-executor04
+[link_java_juc_executor05]: /2012/08/15/juc-executor05
+[link_java_juc_executor06]: /2012/08/15/juc-executor06
+
 
 
 <!-- 数据结构和算法 链接 -->
@@ -228,9 +422,21 @@ date: 2100-01-01 00:01
 [link_ds_tree_bstree_c]:     /2013/02/01/bstree-c
 [link_ds_tree_bstree_cpp]:   /2013/02/01/bstree-cpp
 [link_ds_tree_bstree_java]:  /2013/02/01/bstree-java
-[link_ds_tree_huffman_c]:    /2013/02/04/huffman-c
-[link_ds_tree_huffman_cpp]:  /2013/02/04/huffman-cpp
-[link_ds_tree_huffman_java]: /2013/02/04/huffman-java
+[link_ds_tree_avltree_c]:       /2013/02/02/avltree-c
+[link_ds_tree_avltree_cpp]:     /2013/02/02/avltree-cpp
+[link_ds_tree_avltree_java]:    /2013/02/02/avltree-java
+[link_ds_tree_splaytree_c]:     /2013/02/03/splaytree-c
+[link_ds_tree_splaytree_cpp]:   /2013/02/03/splaytree-cpp
+[link_ds_tree_splaytree_java]:  /2013/02/03/splaytree-java
+[link_ds_tree_huffman_c]:       /2013/02/04/huffman-c
+[link_ds_tree_huffman_cpp]:     /2013/02/04/huffman-cpp
+[link_ds_tree_huffman_java]:    /2013/02/04/huffman-java
+[link_ds_tree_rbtree01]:        /2013/02/05/rbtree01
+[link_ds_tree_rbtree02]:        /2013/02/05/rbtree02
+[link_ds_tree_rbtree03]:        /2013/02/05/rbtree03
+[link_ds_tree_rbtree04]:        /2013/02/05/rbtree04
+[link_ds_tree_rbtree05]:        /2013/02/05/rbtree05
+[link_ds_tree_rbtree06]:        /2013/02/05/rbtree06
 
 [link_ds_heap_binary_c]:      /2013/03/01/binary-heap-c
 [link_ds_heap_binary_cpp]:    /2013/03/01/binary-heap-cplus
@@ -241,6 +447,12 @@ date: 2100-01-01 00:01
 [link_ds_heap_skewheap_c]:    /2013/03/03/skewheap-c
 [link_ds_heap_skewheap_cpp]:  /2013/03/03/skewheap-cplus
 [link_ds_heap_skewheap_java]: /2013/03/03/skewheap-java
+[link_ds_heap_binomial_c]:      /2013/03/04/binomial-c
+[link_ds_heap_binomial_cpp]:    /2013/03/04/binomial-cpp
+[link_ds_heap_binomial_java]:   /2013/03/04/binomial-java
+[link_ds_heap_fabonacci_c]:     /2013/03/05/fabonacci-c
+[link_ds_heap_fabonacci_cpp]:   /2013/03/05/fabonacci-cpp
+[link_ds_heap_fabonacci_java]:  /2013/03/05/fabonacci-java
 
 [link_ds_graph_thesis]:          /2013/04/05/graph-thesis
 [link_ds_graph_matrix_udg_c]:    /2013/04/06/basic-matrix-udg-c
@@ -283,4 +495,33 @@ date: 2100-01-01 00:01
 [link_algrithm_radix-sort]:   /2013/05/10/radix-sort
 
 
+
+
+
+<!-- 设计模式 -->
+[link_uml01]:   /2012/10/01/uml
+[link_uml02]:   /2012/10/02/uml
+[link_uml03]:   /2012/10/03/uml
+[link_uml04]:   /2012/10/04/uml
+[link_uml05]:   /2012/10/05/uml
+
+[link_pattern_01]:   /2012/10/11/design_pattern
+[link_pattern_02]:   /2012/10/12/design_pattern
+[link_pattern_03]:   /2012/10/13/design_pattern
+[link_pattern_04]:   /2012/10/14/design_pattern
+[link_pattern_05]:   /2012/10/15/design_pattern
+[link_pattern_06]:   /2012/10/16/design_pattern
+[link_pattern_07]:   /2012/10/17/design_pattern
+[link_pattern_08]:   /2012/10/18/design_pattern
+[link_pattern_09]:   /2012/10/19/design_pattern
+[link_pattern_10]:   /2012/10/20/design_pattern
+[link_pattern_11]:   /2012/10/21/design_pattern
+[link_pattern_12]:   /2012/10/22/design_pattern
+[link_pattern_13]:   /2012/10/23/design_pattern
+[link_pattern_14]:   /2012/10/24/design_pattern
+[link_pattern_15]:   /2012/10/25/design_pattern
+[link_pattern_16]:   /2012/10/26/design_pattern
+[link_pattern_17]:   /2012/10/27/design_pattern
+[link_pattern_18]:   /2012/10/28/design_pattern
+[link_pattern_19]:   /2012/10/29/design_pattern
 
