添加：ubuntu系统下通过wpa_supplicant进行wifi连接。

--- a/_posts/linux/ubuntu/2011-07-04-ubuntu-02-cmd.md
+++ b/_posts/linux/ubuntu/2011-07-04-ubuntu-02-cmd.md
@@ -7,8 +7,15 @@ tags: [linux]
 date: 2011-07-04 09:02
 ---
 
+> **目录**  
+[](#anchor1)  
+[](#anchor2)  
+[](#anchor3)  
 
-# 1. 基本指令
+
+
+<a name="anchor1"></a>
+# 1. 基本网络指令
 
 **(01) 查看网络配置情况**
 
@@ -62,6 +69,8 @@ date: 2011-07-04 09:02
     $ ip -4 addr add 192.168.4.1 dev eth0
 
 
+<br/>
+<a name="anchor2"></a>
 # 2. Wifi网络
 
 (01) 查看网络状态
@@ -76,40 +85,169 @@ date: 2011-07-04 09:02
 
     $ iwlist wlan0 scan
 
-(04) 连接到SSID为skywang的wifi(没有密码)
+
+<br/>
+## 2.1 通过wireless-tools连接wifi
+
+wireless-tools连接wifi，只能连接"没有密码"或者"使用WEP加密"的wifi。对于WPA加密的wifi，是无法通过wireless-tools来连接的；但是，可以使用wpa_supplicant来连接wpa加密的wifi。
+
+(01) 连接到SSID为skywang，且没有密码的wifi。
 
     $ iwconfig wlan0 essid "skywang"
 
-(05) 连接到SSID为skywang的wifi，加密类型是WEP的，密码是12345678
+(02) 连接到SSID为skywang，加密类型是WEP，密码是12345678的wifi。
 
     $ iwconfig wlan0 essid "skywang" key 12345678
 
-注意：这种方式只能用于链接WEP加密的wifi
 
-(06) wpa_supplicant可以连接任意加密类型的wifi。
 
-若采用wpa_supplicant进行连接，有3步。  
-第1步：确认要连接的wifi节点的SSID和加密信息等内容。
 
-    $ iwlist wlan0 scan
+<br/>
+## 2.2 通过wpa_supplicant连接wifi
 
-第2步：编辑配置文件/etc/wpa_supplicant/wpa_supplicant.conf，添加对应的wifi节点。若没有配置文件，则新建该文件。文件内容如下：  
+wpa_supplicant几乎支持任意加密或非加密的wifi。wpa_supplicant有两种连接方式，一种是使用wpa_cli进行连接；另一种是使用配置文件。
 
+参考链接：  
+[https://wiki.archlinux.org/index.php/WPA_supplicant](https://wiki.archlinux.org/index.php/WPA_supplicant)
+
+<br/>
+### 第1种 使用wpa_cli
+
+**步骤1**：新建配置文件/etc/wpa_supplicant/example.conf
+
+    ctrl_interface=/run/wpa_supplicant
+    update_config=1
+
+说明：ctrl_interface表示控制套接字，这里的路径设置为/var/run/wpa_supplicant，在wpa_supplicant运行的时候，会自动建立该文件。  
+update_config表示是否wpa_supplicant可以更新该配置文件，这里值为1表示可以更新。
+
+
+**步骤2**：运行wpa_supplicant，并使用"步骤1"中的配置文件
+
+    $ sudo wpa_supplicant -B -i wlan0 -c /etc/wpa_supplicant/example.conf
+
+说明：wlan0是wifi的节点。
+
+**步骤3**：通过wpa_cli连接wifi
+
+这里假设需要连接到的网络的信息是：SSID为skywang，密码是12345678，加密类型是WPA2。
+
+通过wpa_cli连接wifi，需要通过几步。
+
+    > scan                                           // 进行扫描
+    OK                                               // 输出
+    <3>CTRL-EVENT-SCAN-RESULTS                       // 输出
+    > scan_results                                   // 查看扫描结果
+    bssid / frequency / signal level / flags / ssid
+    00:00:00:00:00:00 2462 -49 [WPA2-PSK-CCMP][ESS] MYSSID
+    11:11:11:11:11:11 2437 -64 [WPA2-PSK-CCMP][ESS] ANOTHERSSID
+
+    > add_network                                    // 添加网络
+    0                                                // 输出。表示添加的网络id是0
+    > set_network 0 ssid "skywang"                   // 设置网络0的ssid为skywang
+    > set_network 0 psk "12345678"                   // 设置网络0的密码为12345678
+    > enable_network 0                               // 启用网络0
+    > status                                         // 查看网络状态，看wifi是否连上
+    > save_config                                    // 最后，若wifi连上，则保存网络0的信息到配置文件example.conf中
+
+**步骤4**：启用wlan0的dhcp功能
+
+经过步骤3之后，通过ifconfig查看，wlan0可能还没有分配IP地址。此时，需要通过DHCP给wlan0分配IP。
+
+    $ sudo dhclient wlan0
+
+或者
+
+    $ sudo dhcpcd wlan0
+
+此时，wifi就应该连接成功了！
+
+注意：**wpa_supplicant与network-manager可能有冲突！若有异常错误，可以卸载network-manager后重试。**。
+
+
+**wpa_cli指令表**
+
+|    指令      |   缩写   |          说明                |
+| ------------ | -------- | ---------------------------- |
+| status | stat | displays the current connection status |
+| disconnect | disc | prevents wpa_supplicant from connecting to any access point |
+| quit | q | exits wpa_cli |
+| terminate t| erm k| ills wpa_supplicant |
+| reconfigure r| econ r| eloads wpa_supplicant with the configuration file supplied (-c parameter) |
+| scan s| can s| cans for available access points (only scans it, doesn't display anything) |
+| scan_result s| can_r d| isplays the results of the last scan |
+| list_networks l| ist_n d| isplays a list of configured networks and their status (active or not, enabled or disabled) |
+| select_network s| elect_n s| elect a network among those defined to initiate a connection (ie select_network 0) |
+| enable_network e| nable_n m| akes a configured network available for selection (ie enable_network 0) |
+| disable_network d| isable_n m| akes a configured network unavailable for selection (ie disable_network 0) |
+| remove_network r| emove_n r| emoves a network and its configuration from the list (ie remove_network 0) |
+| add_network a| dd_n a| dds a new network to the list. Its id will be created automatically |
+| set_network s| et_n s| hows a very short list of available options to configure a network when supplied with no parameters. See next section for a list of extremely useful parameters to be used with set_network and get_network. |
+| get_network g| et_n d| isplays the required parameter for the specified network. See next section for a list of parameters |
+| save_config s| ave_c s| aves the configuration |
+
+
+
+<br/>
+### 第2种 使用配置文件
+
+**步骤1**：新建配置文件/etc/wpa_supplicant/wpa_supplicant.conf。
+
+假设需要连接到的网络的信息是：SSID为skywang，密码是12345678，加密类型是WPA2。
+
+则wpa_supplicant.conf的配置信息如下：
+
+    ctrl_interface=/run/wpa_supplicant
+    update_config=1
     network={
-        ssid="simple"
-        psk="very secret passphrase"
-        priority=5
+        ssid="skywang"
+        psk="12345678"
     }
 
-说明：上面仅仅只是一个模板。ssid是要连接的wifi的SSID，而psk则是密码。更多wpa_supplicant.conf的示例，参考后面的内容。
+**步骤2**：通过指令去连接wifi。
 
-第3步：通过指令去连接wifi。
-
-    # sudo wpa_supplicant -d -Dwext -iwlan0 -c/etc/wpa_supplicant/wpa_supplicant.conf
+    # sudo wpa_supplicant -B -i wlan0 -c /etc/wpa_supplicant/wpa_supplicant.conf
 
 或
 
-    # sudo wpa_supplicant -d -Dnl80211,wext -iwlan0 -c/etc/wpa_supplicant/wpa_supplicant.conf
+    # sudo wpa_supplicant -B -D wext -i wlan0 -c /etc/wpa_supplicant/wpa_supplicant.conf
+
+或
+
+    # sudo wpa_supplicant -d -D nl80211,wext -i wlan0 -c /etc/wpa_supplicant/wpa_supplicant.conf
+
+
+
+<br/>
+## 2.3 wifi网络移植
+
+步骤1：通过wpa_supplicant的/etc/wpa_supplicant/wpa_supplicant.conf连接网络
+
+wpa_supplicant.conf的配置信息如下：
+
+    ctrl_interface=DIR=/run/wpa_supplicant GROUP=ubuntu
+    update_config=1
+
+说明：务必要加DIR和GROUP，GROUP表示ubuntu用户组的成员都可以使用wpa_supplicant。  
+否则，只有root才能使用！
+
+步骤2：/etc/network/interfaces配置文件的内容
+
+    auto lo
+    iface lo inet lopback
+    iface eth0 inet dhcp
+
+    allow-hotplug wlan0
+    iface wlan0 inet manual
+    wpa-roam /etc/wpa_supplicant/wpa_supplicant.conf
+    iface default inet dhcp
+
+
+步骤3：安装wpa_gui
+
+    $sudo apt-get install wpagui
+
+步骤4：重启电脑，然后打开wpa_gui工具。就可以从界面去连接网络了。
 
 
 **wpa_supplicant.conf配置模板**
