01, LinearLayout and RelativeLayout.

--- a/_posts/android/ui/widgets/2014-02-01-TextView02.md
+++ b/_posts/android/ui/widgets/2014-02-01-TextView02.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "Android控件篇01之 TextView(二)之监听文本变化"
+title: "Android控件篇01之 TextView(二)监听文本变化"
 description: "android widgets"
 category: android
 tags: [android]
@@ -9,7 +9,7 @@ date: 2014-02-01 09:02
 
 > 本文介绍Andrid中监听TextView、EditText文本变化的方法。
 
-> 下面的内容都是参考"[TextView测试代码](https://github.com/wangkuiwu/android_applets/tree/master/api_guide/ui/widgets/TextView/02_senior)"进行的讲解。
+> 点击查看"[TextView示例源码](https://github.com/wangkuiwu/android_applets/tree/master/api_guide/ui/widgets/TextView/02_senior)"。
 
 
 ## 1. 自定义定义文本监听类
