--- a/_posts/android/ui/widgets/2014-02-01-TextView03.md
+++ b/_posts/android/ui/widgets/2014-02-01-TextView03.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "Android控件篇01之 TextView(三)之跑马灯效果"
+title: "Android控件篇01之 TextView(三)跑马灯效果"
 description: "android widgets"
 category: android
 tags: [android]
@@ -9,7 +9,7 @@ date: 2014-02-01 09:03
 
 > 本章介绍TextView跑马灯的使用和相关注意事项
 
-> 下面的内容都是参考"[TextView测试代码](https://github.com/wangkuiwu/android_applets/tree/master/api_guide/ui/widgets/TextView/02_senior)"进行的讲解。
+> 点击查看"[TextView示例源码](https://github.com/wangkuiwu/android_applets/tree/master/api_guide/ui/widgets/TextView/02_senior)"。
 
 **TextView的定义**
 
