--- a/_posts/android/ui/widgets/2014-02-01-TextView04.md
+++ b/_posts/android/ui/widgets/2014-02-01-TextView04.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "Android控件篇01之 TextView(四)之Spannable特效"
+title: "Android控件篇01之 TextView(四)Spannable特效"
 description: "android widgets"
 category: android
 tags: [android]
@@ -9,7 +9,7 @@ date: 2014-02-01 09:04
 
 > 本章介绍TextView与SpannableString结合的各种特效。
 
-> 下面的内容都是参考"[TextView测试代码](https://github.com/wangkuiwu/android_applets/tree/master/api_guide/ui/widgets/TextView/02_senior)"进行的讲解。
+> 点击查看"[TextView示例源码](https://github.com/wangkuiwu/android_applets/tree/master/api_guide/ui/widgets/TextView/02_senior)"。
 
 
 SpannableString中支持的特效类。
