--- a/_posts/android/ui/widgets/2014-02-03-Button.md
+++ b/_posts/android/ui/widgets/2014-02-03-Button.md
@@ -8,7 +8,9 @@ date: 2014-02-03 09:11
 ---
 
 
-> 本文介绍Button控件。下面的内容都是参考"[Button测试代码](https://github.com/wangkuiwu/android_applets/tree/master/api_guide/ui/widgets/Button/ButtonTest)"进行的讲解，感兴趣的可以进行测试验证。
+> 本文介绍Button控件。
+
+> 点击查看"[Button示例源码](https://github.com/wangkuiwu/android_applets/tree/master/api_guide/ui/widgets/Button/ButtonTest)"。
 
 > **目录**  
 [1. Button基本使用](#anchor1)  
@@ -18,8 +20,6 @@ date: 2014-02-03 09:11
 
 <a name="anchor1"></a>
 # 1. Button基本使用
-
-## 1.1 Button基本定义
 
 
 基本的Button定义大致如下：
@@ -32,13 +32,13 @@ date: 2014-02-03 09:11
         android:text="@string/bt_simple" />
 
 
-## 1.2 Button事件的响应
+# 1.2 Button事件的响应
 
 有三种方法去处理Button响应事件。
 
-### 1.2.1 在资源文件中声明
+## 1.2.1 在资源文件中声明
 
-可以在Button的资源文件中通过"android:onClick"属性来指定Button的点击方法，如果再在Button对应的Activity或Fragment中实现该方法。
+可以在Button的资源文件中通过"android:onClick"属性来指定Button的点击方法，然后再在Button所属的Activity或Fragment中实现该方法。
 
 下面是"在资源文件中定义andriod:onClick"的示例：
 
@@ -48,17 +48,16 @@ date: 2014-02-03 09:11
         android:layout_height="wrap_content"
         android:text="@string/bt_send"
         android:onClick="sendMessage"
-        android:textSize="12sp"
-        />
+        android:textSize="12sp" />
 
 下面是在Activity中实现的sendMessage()示例：
 
     public void sendMessage(View v) {
         Toast.makeText(this, "send message!", Toast.LENGTH_SHORT).show();
-    }   
+    }
 
 
-### 1.2.2 通过匿名内部类实现onClick监听事件
+## 1.2.2 通过匿名内部类实现onClick监听事件
 
 该方法是在获取Button对象之后，匿名实现View.OnClickListener接口，并将它作为Button对象的监听处理事件。
 
@@ -71,7 +70,7 @@ date: 2014-02-03 09:11
     }); 
 
 
-### 1.2.3 通过Activity实现onClick监听事件
+## 1.2.3 通过Activity实现onClick监听事件
 
 该方法是Button所属的类直接实现View.OnClickListener接口，然后将该类作为Button对象的监听处理事件。
 
@@ -120,8 +119,7 @@ date: 2014-02-03 09:11
         android:layout_height="wrap_content"         
         android:text="@string/bt_style"
         style="?android:attr/borderlessButtonStyle"  
-        android:textSize="12sp"
-        />
+        android:textSize="12sp" />
 
 说明：上面是创建一个无边框按钮。需要在Button所属的Activity或Application中声明android:theme="@android:style/Theme.Holo"属性才有效！
 
@@ -174,8 +172,7 @@ date: 2014-02-03 09:11
         android:layout_height="wrap_content"
         android:text="@string/bt_diy"
         android:background="@drawable/button_style1"
-        android:textSize="12sp"
-        />
+        android:textSize="12sp" />
 
 
 接着，实现button_style1.xml。它的内容如下：
